Fix: Typos in many files

--- a/curriculum/challenges/english/07-scientific-computing-with-python/learn-interfaces-by-building-an-equation-solver/66562f71937f877c66123bbe.md
+++ b/curriculum/challenges/english/07-scientific-computing-with-python/learn-interfaces-by-building-an-equation-solver/66562f71937f877c66123bbe.md
@@ -35,7 +35,7 @@ _Node(_code).find_class("Equation").find_function("__init_subclass__").has_stmt(
 `)) })
 ```
 
-The `type` attribute of the `LinearEquation` class shouls have the value `'Linear Equation'`.
+The `type` attribute of the `LinearEquation` class should have the value `'Linear Equation'`.
 
 ```js
 ({ test: () => assert(runPython(`_Node(_code).find_class("LinearEquation").has_stmt("type = 'Linear Equation'")`)) })
