--- a/curriculum/challenges/english/21-a2-english-for-developers/learn-how-to-discuss-your-morning-or-evening-routine/6557e5c6a854bfcad48808c4.md
+++ b/curriculum/challenges/english/21-a2-english-for-developers/learn-how-to-discuss-your-morning-or-evening-routine/6557e5c6a854bfcad48808c4.md
@@ -87,7 +87,7 @@ Going away from a place, in this case, her home. Try finishing the word with `in
 
 ### --feedback--
 
-Having knowledge or being aware of the day's tasks after acessing her email.
+Having knowledge or being aware of the day's tasks after accessing her email.
 
 ---
 
