--- a/curriculum/challenges/english/21-a2-english-for-developers/learn-how-to-ask-and-share-about-educational-and-professional-background/657b30e1b9f035e7e656fd01.md
+++ b/curriculum/challenges/english/21-a2-english-for-developers/learn-how-to-ask-and-share-about-educational-and-professional-background/657b30e1b9f035e7e656fd01.md
@@ -9,7 +9,7 @@ dashedName: task-91
 
 # --description--
 
-An `employee` is a person who works for a company or another person. Talking about `employees' well-being` means you're discussing the health and happiness of the people working at a place. The `'` after `employees` shows that the well-being belongs to them. For exemple: 
+An `employee` is a person who works for a company or another person. Talking about `employees' well-being` means you're discussing the health and happiness of the people working at a place. The `'` after `employees` shows that the well-being belongs to them. For example: 
 
 `The project's code`, means the code belongs to one project. If you're talking about several projects and say `the projects' code`, it means the code belongs to more than one project.
 
